<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="left|top"
              android:weightSum="1"
             tools:context="com.act.r1_demo.CpuFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_type_a"
                android:id="@+id/btnSelectA"
                android:layout_column="0"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_type_b"
                android:id="@+id/btnSelectB"
                android:layout_column="1"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deselect"
                android:id="@+id/btnDeselect"
                android:layout_column="6"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/txtATR"
                android:layout_column="0"
                android:layout_span="3"
                android:layout_weight="1"
                android:layout_marginTop="10dp"/>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_type_a_uid"
        android:id="@+id/btnReadUID"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="C-APDU:"
            android:id="@+id/textView11"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:id="@+id/spinApduCmds"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transmit"
        android:id="@+id/btnTransmit"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtApduResp"
        android:layout_weight="0.61"/>
</LinearLayout>
