<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="left|top"
              android:weightSum="1"
             tools:context="com.act.r1_demo.Mf1sxxFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:id="@+id/btnMf1Select"
                android:layout_column="0"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readuid"
                android:id="@+id/btnMf1ReadUID"
                android:layout_column="1"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_bright">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="扇区号:"
                android:id="@+id/textView"
                android:layout_column="0"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtMf1SectorNo"
                android:layout_column="0"
                android:layout_span="2"
                android:layout_weight="1"
                android:maxLength="2"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="密钥类型:"
                android:id="@+id/textView6"
                android:layout_column="0"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinMf1KeyTypes"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="密钥数据 (HEX):"
                android:id="@+id/textView7"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtMf1KeyData"
                android:layout_column="0"
                android:layout_weight="1"
                android:digits="0123456789ABCDEF"
                android:inputType="textCapCharacters"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth"
                android:id="@+id/btnMf1Auth"
                android:layout_column="0"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:id="@+id/btnMf1Update"
                android:layout_column="1"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_bright">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="块号:"
                android:id="@+id/textView2"
                android:layout_column="0"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtMf1BlockNo"
                android:layout_column="0"
                android:layout_span="2"
                android:layout_weight="1"
                android:maxLength="2"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="块数据 (HEX):"
                android:id="@+id/textView5"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtMf1RawData"
                android:layout_column="0"
                android:layout_weight="1"
                android:digits="0123456789ABCDEF"
                android:inputType="textCapCharacters"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readrawdata"
                android:id="@+id/btnMf1Read"
                android:layout_column="0"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writerawdata"
                android:id="@+id/btnMf1Write"
                android:layout_column="1"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="值 (HEX):"
                android:id="@+id/textView4"
                android:layout_column="0"
                android:maxLength="8"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtMf1Value"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_span="2"
                android:maxLength="8"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setvalue"
                android:id="@+id/btnMf1SetValue"
                android:layout_column="0"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readvalue"
                android:id="@+id/btnMf1ReadValue"
                android:layout_column="1"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increment"
                android:id="@+id/btnMf1Increment"
                android:layout_column="0"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrement"
                android:id="@+id/btnMf1Decrement"
                android:layout_column="1"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>
</LinearLayout>
