<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="left|top"
              android:weightSum="1"
             tools:context="com.act.r1_demo.Mf0ulFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.43">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:id="@+id/btnMf0Select"
                android:layout_column="0"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readuid"
                android:id="@+id/btnMf0ReadUID"
                android:layout_column="1"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_bright">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="页地址:"
                android:id="@+id/textView8"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtMf0PageAddr"
                android:layout_column="0"
                android:layout_span="2"
                android:layout_weight="1"
                android:maxLength="2"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readrawdata"
                android:id="@+id/btnMf0Read"
                android:layout_column="0"
                android:layout_span="2"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="页数据:"
                android:id="@+id/textView9"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edtMf0PageData"
                android:layout_column="0"
                android:layout_span="2"
                android:digits="0123456789ABCDEF"
                android:inputType="textCapCharacters"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writerawdata"
                android:id="@+id/btnMf0Write"
                android:layout_column="0"
                android:layout_span="2"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
